# mrogue

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  item_templates.json  main.py  monster_templates.json  mrogue.spec  pyproject.toml  rogue.py  rogue.spec  setup.cfg  setup.py
doc/: BUGS.md  CHANGELOG.md  TODO.md
docs/: BUGS.md  CHANGELOG.md  README.md  TODO.md
modules/: __init__.py  console.py  item.py  map.py  monster.py
mrogue/: __init__.py  console.py  effects.py  io.py  item.py  item_data.py  map.py  message.py  monster.py  monster_data.py  player.py  timers.py  unit.py  utils.py
mrogue/item/: __init__.py  data.py  item.py  manager.py  template.py
rogue/: __init__.py  curse.py  interface.py  item.py  item_templates.json  map.py  message.py  monster.py  monster_templates.json  pgame.py  player.py  unit.py  util.py
