[tool.poetry]
name = "mrogue"
version = "0.8.3"
description = "MRogue: A Roguelike written in Python."
authors = ["Kamil Nienałtowski <niekamil@protonmail.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "3.10.6"
tcod = "^13.8.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
