[tool.poetry]
name = "mrogue"
version = "0.8.4"
description = "MRogue: A Roguelike written in Python."
authors = ["Kamil Nienałtowski <niekamil@protonmail.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
tcod = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
flake8 = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
